infrastructure/kubernetes/kafka-broker.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
  namespace: smartretail
  labels:
    app.kubernetes.io/name: kafka
    app.kubernetes.io/component: message-broker
spec:
  serviceName: kafka-headless
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kafka
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kafka
    spec:
      containers:
        - name: kafka
          image: apache/kafka:3.8.0
          ports:
            - name: client
              containerPort: 9092
            - name: controller
              containerPort: 9093
          resources:
            requests:
              cpu: 500m
              memory: 1024Mi
            limits:
              cpu: 2000m
              memory: 2048Mi
          readinessProbe:
            tcpSocket:
              port: client
            initialDelaySeconds: 15
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
  namespace: smartretail
  labels:
    app.kubernetes.io/name: kafka
spec:
  type: ClusterIP
  ports:
    - name: client
      port: 9092
      targetPort: client
  selector:
    app.kubernetes.io/name: kafka
